About page press no longer visible when resized

--- a/icons.css
+++ b/icons.css
@@ -2,7 +2,7 @@
     width: 45px;
     height: 45px;
     background-image: url(icons/twitter_2.png); 
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     opacity: 0.35;
 }
